HuuY update lan 1

--- a/SuIT.html
+++ b/SuIT.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head lang="en">
@@ -10593,44 +10593,7 @@
                 <div id="LINE508" class="widget-element widget-snap" lp-type="line" lp-lang="LINE" lp-display="block" lp-ani="wow bounceInLeft animated">
                     <div class="widget-content">
                         <div class="line"></div>
-                    </div>
-                </div>
-                <div id="LINE509" class="widget-element widget-snap" lp-type="line" lp-lang="LINE" lp-display="block" lp-ani="wow bounceInLeft animated">
-                    <div class="widget-content">
-                        <div class="line"></div>
-                    </div>
-                </div>
-                <div id="LINE510" class="widget-element widget-snap" lp-type="line" lp-lang="LINE" lp-display="block" lp-ani="wow bounceInLeft animated">
-                    <div class="widget-content">
-                        <div class="line"></div>
-                    </div>
-                </div>
-                <div id="LINE511" class="widget-element widget-snap" lp-type="line" lp-lang="LINE" lp-display="block" lp-ani="wow bounceInLeft animated">
-                    <div class="widget-content">
-                        <div class="line"></div>
-                    </div>
-                </div>
-                <div id="LINE512" class="widget-element widget-snap" lp-type="line" lp-lang="LINE" lp-display="block" lp-ani="wow bounceInLeft animated">
-                    <div class="widget-content">
-                        <div class="line"></div>
-                    </div>
-                </div>
-                <div id="LINE513" class="widget-element widget-snap" lp-type="line" lp-lang="LINE" lp-display="block" lp-ani="wow bounceInLeft animated">
-                    <div class="widget-content">
-                        <div class="line"></div>
-                    </div>
-                </div>
-                <div id="LINE514" class="widget-element widget-snap" lp-type="line" lp-lang="LINE" lp-display="block" lp-ani="wow bounceInLeft animated">
-                    <div class="widget-content">
-                        <div class="line"></div>
-                    </div>
-                </div>
-                <div id="LINE515" class="widget-element widget-snap" lp-type="line" lp-lang="LINE" lp-display="block" lp-ani="wow bounceInLeft animated">
-                    <div class="widget-content">
-                        <div class="line"></div>
-                    </div>
-                </div>
-            </div>
+             
             <div class="ladi-widget-overlay"></div>
         </div>
 		
